--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "history": "^5.0.0",
     "react-icons": "^3.11.0",
     "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "whatwg-fetch": "^3.4.0"
